gitops_apps/kube-ops-view/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: "node-role.kubernetes.io/infra=true"
  name: ocp-ops-view
  labels:
    argocd.argoproj.io/managed-by=openshift-gitops
